--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -5,9 +5,9 @@
 
 # Appearance
 
-theme: earth
-day_night: false
-font: 'native'
+theme: mytheme
+day_night: true
+font: 'minimal'
 font_size: M
 
 # SEO
@@ -21,10 +21,6 @@ twitter: ''
 # Contact (edit or remove options as required)
 
 email: brunogiovanini@outlook.com
-office_hours:
-  - 'Monday 10:00 to 13:00'
-  - 'Wednesday 09:00 to 10:00'
-appointment_url: 'https://calendly.com'
 contact_links:
   - icon: twitter
     icon_pack: fab
