--- a/data/themes/mytheme.toml
+++ b/data/themes/mytheme.toml
@@ -5,17 +5,17 @@ name = "Bruno's theme"
 light = true
 
 # Primary
-primary = "#000000"
+primary = "#000"
 
 # Menu
-menu_primary = "#000"
-menu_text = "#eb8954"
-menu_text_active = "#2962ff"
-menu_title = "#2b2b2b"
+menu_primary = "#cccccc"
+menu_text = "#2e2e2e"
+menu_text_active = "#000"
+menu_title = "000"
 
 # Home sections
-home_section_odd = "rgb(255, 255, 255)"
-home_section_even = "rgb(247, 247, 247)"
+home_section_odd = "rgb(250, 250, 250)"
+home_section_even = "rgb(235, 235, 235)"
 
 [dark]
   link = "#bbdefb"
