--- a/themes/github.com/wowchemy/wowchemy-hugo-modules/wowchemy/v5/data/themes/forest.toml
+++ b/themes/github.com/wowchemy/wowchemy-hugo-modules/wowchemy/v5/data/themes/forest.toml
@@ -5,10 +5,10 @@ name = "Forest"
 light = true
 
 # Primary
-primary = "#4caf50"
+primary = "#ba5623"
 
 # Menu
-menu_primary = "#4caf50"
+menu_primary = "#ba5623"
 menu_text = "#fff"
 menu_text_active = "#1b5e20"
 menu_title = "#fff"
